@@ -1,6 +1,10 @@
 package com.bretth.osmosis.extract.mysql;
 
-import com.bretth.osmosis.core.xml.common.DateParser;
+import java.util.Date;
+
+import com.bretth.osmosis.core.domain.v0_5.Node;
+import com.bretth.osmosis.core.domain.v0_5.Tag;
+import com.bretth.osmosis.core.store.IndexedObjectStore;
 
 
 /**
@@ -10,8 +14,6 @@ import com.bretth.osmosis.core.xml.common.DateParser;
  */
 public class Test {
 	
-	private static DateParser parser = new DateParser();
-	
 	/**
 	 * Entry point to the application.
 	 * 
@@ -19,12 +21,28 @@ public class Test {
 	 *            Command line arguments.
 	 */
 	public static void main(String[] args) {
-		test("2007-09-23T08:25:43.000Z");
-		test("2007-09-23T08:25:43Z");
-	}
-	
-	
-	private static void test(String date) {
-		System.out.println("date: " + date + " parsed: " + parser.parse(date));
+		IndexedObjectStore<Node> store = new IndexedObjectStore<Node>("test");
+		
+		try {
+			System.out.println("Start " + new Date());
+			for (int i = 0; i < 100000; i++) {
+				Node node;
+				
+				node = new Node(i, new Date(), "user" + i, 0, 0);
+				for (int j = 0; j < 100; j++) {
+					node.addTag(new Tag("key" + i, "This is the key value"));
+				}
+				
+				store.add(i, node);
+			}
+			System.out.println("Middle " + new Date());
+			for (int i = 0; i < 100000; i++) {
+				store.get(i).getUser();
+			}
+			System.out.println("Finish " + new Date());
+			
+		} finally {
+			store.release();
+		}
 	}
 }
